--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -134,3 +134,6 @@ p{
     background-image: linear-gradient(to bottom,  #30e3cb,  #2bc4ad);
     text-decoration: none;
   }
+.copyright{
+    font-size: 10px;
+}
